syntax = "proto3";
import "SharedMessages.proto";

option java_multiple_files = true;
option java_package = "via.sep3.group11.tier2.protobuf";

service Agreement{
  rpc addAgreement(GAgreement) returns (GAgreement);
  rpc updateAgreement(GAgreement) returns (GAgreement);
  rpc getAgreementById(GId) returns (GAgreement);
  rpc getAgreementByHostId(GEmail) returns (GAgreementList);
  rpc deleteAgreement(GId) returns (GEmpty);
  rpc getAllAgreementByHousingId(GId) returns (GAgreementList);
  rpc getAgreementByRefugeeId(GEmail) returns (GAgreement);
}

message GAgreementList
{
  repeated GAgreement agreements = 1;
}